проверка ничего интересного

--- a/test.html
+++ b/test.html
@@ -33,7 +33,7 @@
 
 
 		<main class="container">
-			<section class="test ">
+			<section class="test none">
 
 				<div class="test__content">
 					<ul class="question__number">
