Перед подключением NPM

--- a/index.html
+++ b/index.html
@@ -36,14 +36,15 @@
 						<li class="menu__item"><a href="./lectures.html">Лекции</a></li>
 						<li class="menu__item"><a href="./materials.html">Доп материалы</a></li>
 						<li class="menu__item"><a href="./test.html">ТЕСТ</a></li>
-
-
 					</ul>
 					<div class="nav__login">
-						<a class="login__admin flex-row" href="#"><img src="./dist/img/account.svg"
+						<a class="flex-row login" type="button" href="#" id="open-auth-btn"><img class="log__img" src="./dist/img/account.svg"
 								alt="Авторизация"></img><span>Вход</span>
 						</a>
-					</div>
+						<a class="flex-row logout visually-hidden" type="button" href="#" id="close-auth-btn"><img class="log__img" src="./dist/img/account.svg"
+								alt="Авторизация"></img><span>Выход</span>
+						</a>
+					</div>				
 
 				</div>
 			</div>
@@ -55,98 +56,10 @@
 			<section class="info ">
 				<h2 class="info__title">Ресурс по самостоятельной подготовке и сдаче теста по <br>ОХРАНЕ ТРУДА </h2>
 				<p class="info__manual"> описать как проходить тест и готовиться к нему. Lorem ipsum dolor sit amet consectetur
-					adipisicing elit. Eligendi saepe quas exercitationem pariatur magnam est ducimus veritatis, nam eum culpa
-					quia. Totam quasi possimus voluptatum fugit dolorem corrupti hic quaerat voluptatem earum iusto incidunt
-					suscipit nam illo eligendi dolore accusantium, vel consectetur, consequatur quae necessitatibus! Laboriosam
-					ipsam minus doloribus sed id eum! Cum voluptas architecto ad a atque neque deserunt dicta doloribus! Veniam
-					eum nobis vitae earum reiciendis aliquid optio laboriosam neque, labore incidunt odit sunt, delectus
-					doloremque, inventore esse quisquam ullam! Id accusamus nemo esse architecto error tenetur nihil expedita
-					unde, dolorem neque alias maxime maiores eaque ipsum. Quia?
-					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores dolorem adipisci temporibus eligendi
-					itaque dolores placeat minima vel esse voluptas eum eius sit ad quae vero harum in quisquam quidem, numquam ex
-					accusantium consequatur fugiat tempore? Numquam, laudantium! Debitis magni enim doloremque ab itaque
-					consequuntur odio ad repudiandae laudantium veritatis, quas tempora natus quod, tempore nostrum quo at velit
-					qui iure rem quae doloribus id! Assumenda praesentium nobis magnam porro in harum velit, sed repudiandae aut
-					neque beatae natus excepturi incidunt corrupti totam ut id sequi eaque? Dolor quasi optio amet quod, quidem
-					facilis suscipit commodi iure facere enim nesciunt natus et omnis. Maxime tenetur reiciendis eius perferendis
-					recusandae quas, quam velit earum saepe cum, ex id adipisci distinctio odit, nobis dolore ea accusamus facilis
-					doloribus molestias aliquid debitis quia! Magnam facilis enim voluptatibus repudiandae quos maxime repellendus
-					sapiente exercitationem consequatur cumque esse quia vitae excepturi laborum fugit tempore cupiditate nam,
-					temporibus optio facere aspernatur. Aspernatur, maxime mollitia debitis laboriosam optio veniam officiis,
-					illo, accusantium cupiditate animi nobis pariatur voluptatem consequatur amet id tempora ipsa sint beatae
-					quaerat esse deserunt. Autem ea ex possimus est quisquam ipsam obcaecati omnis suscipit, sint commodi mollitia
-					inventore eum nisi magnam iste sit unde repellat ipsa hic accusamus veniam aut? Sit doloremque ducimus debitis
-					libero corrupti fugiat architecto porro exercitationem aut animi quod neque omnis sapiente, incidunt dolorem
-					nisi ut. Blanditiis, laboriosam ut magnam possimus voluptatibus assumenda ipsum a dicta quis odit in eos?
-					Voluptate, animi error mollitia officia commodi fuga tempora voluptates ex, dolor eaque necessitatibus totam?
-					Voluptas neque, omnis tempora veritatis exercitationem maxime fugit! Accusantium, ut iste. Nobis a aspernatur
-					repellat iure fugiat minima sapiente? Nostrum rem dolore inventore, eligendi aliquam accusantium perferendis
-					fuga, ex nobis ipsum itaque eos doloremque dignissimos libero laudantium iusto natus? Natus aliquid debitis
-					voluptas, dolores ducimus atque veritatis ad sint quasi libero consectetur exercitationem asperiores aperiam
-					fugiat quibusdam minus velit ipsum ea, accusamus maxime hic perspiciatis quae quidem similique! Non quisquam
-					illo quis ab praesentium perspiciatis hic amet id sed aliquid minus aliquam quia magnam incidunt, reiciendis
-					accusantium officiis nostrum esse at eius animi dolorum distinctio aperiam. Odit deserunt, voluptas quidem
-					nesciunt minima facere itaque at cumque quo ut, ipsa tempora soluta consectetur, earum non delectus ea quam
-					necessitatibus placeat animi voluptate molestiae et quia? Doloremque fuga laborum et asperiores, labore
-					dolorum natus, autem voluptas animi eligendi adipisci recusandae ipsum hic? Culpa totam adipisci itaque
-					accusamus dolor minima aliquam, vitae quo minus iusto cupiditate hic accusantium provident saepe dolores
-					consequuntur distinctio nam dicta blanditiis doloribus nostrum fugit molestias! Totam aperiam aliquid at.
-					Quisquam quos cupiditate, nostrum odit minus dolores aliquam veritatis corrupti, non, voluptatem perspiciatis
-					nihil officiis perferendis. Aspernatur temporibus similique neque ratione! Incidunt ullam dignissimos
-					inventore fugiat iure et soluta voluptatibus mollitia nisi dicta maiores, exercitationem, repudiandae tenetur
-					odit culpa consequuntur officiis aut voluptates, totam veritatis! Voluptates natus, ratione mollitia rerum non
-					nisi corrupti nemo ullam impedit quasi rem delectus illum dolorem reiciendis fugiat aliquid perferendis,
-					laudantium quidem autem? Nisi maiores sapiente, veniam recusandae tempore quasi quo deserunt reprehenderit.
-					Vero, totam. Optio enim eligendi tempore voluptatum minus dolor voluptatem distinctio aperiam alias deserunt
-					laudantium consequatur nostrum velit, saepe repudiandae cumque a, et, deleniti tempora molestias eius? Nisi,
-					accusantium ea sequi ipsa voluptatum repellat inventore unde repellendus quibusdam corrupti ex. Facere placeat
-					at nihil. Obcaecati, consectetur ipsum ipsa dicta doloribus eligendi blanditiis maiores laboriosam sunt veniam
-					enim vel? Hic sequi soluta quam eum magnam possimus voluptatibus eligendi dicta provident illo non, voluptatem
-					laboriosam nihil est reiciendis maiores? Iusto dignissimos laborum explicabo, neque placeat odio perferendis
-					totam reprehenderit dolores aperiam, iste maiores asperiores obcaecati! Soluta deserunt omnis, facilis aperiam
-					voluptas sunt placeat consequuntur in suscipit ipsa ducimus error mollitia nisi consectetur a, quasi quaerat
-					excepturi sequi aliquam, quod magni enim debitis! Odit corrupti eum nobis alias cumque quos. Quisquam, sint.
-					Quidem pariatur id cumque amet hic minima molestias exercitationem sunt aspernatur eveniet, sint ipsum in
-					quasi fuga quaerat reiciendis commodi maxime inventore quam ea repellendus, dignissimos facilis! Laborum animi
-					libero ratione temporibus eaque quas magnam ipsam debitis aperiam illo iusto dicta cum dolores blanditiis
-					repellat voluptate a, fugit sed, delectus voluptas cupiditate odio tenetur magni! Placeat aliquam voluptas
-					dolore quae amet? Aspernatur esse magnam pariatur rerum voluptatem non nisi magni, delectus cupiditate nam.
-					Mollitia, iusto architecto ipsa quos impedit suscipit vero voluptate qui eum adipisci magni dolores,
-					blanditiis consectetur voluptatibus dolore. Quas incidunt cupiditate fuga rem explicabo vel, laudantium odio
-					ex ad labore ipsum atque adipisci accusantium doloribus fugit, pariatur earum dolorem obcaecati, possimus
-					dolore id dignissimos ipsam! Similique eligendi molestias obcaecati fugit animi impedit ab dolore praesentium
-					nihil, voluptatibus officiis aliquam alias ex qui libero provident, sequi velit et corrupti. Aspernatur cum
-					laborum sint consectetur rerum. Accusamus et assumenda repellendus ullam, dolorum labore soluta architecto,
-					esse qui quam quo quae amet est adipisci cumque! Assumenda atque doloremque sit labore asperiores consequuntur
-					enim architecto, voluptatem saepe numquam possimus quidem eveniet soluta temporibus incidunt praesentium quo
-					culpa laborum corrupti eius ipsam animi sint. Rem deserunt blanditiis at suscipit neque? Sit quos eos minus
-					libero consequuntur placeat, magni consequatur, numquam maiores, omnis officiis earum. Itaque libero rerum in
-					perspiciatis ut dolor excepturi! Non sequi nesciunt ratione cupiditate voluptates hic inventore repudiandae
-					quisquam? Quas, quod! Magnam, saepe! Provident, dolore atque. Odio ex temporibus, cum, debitis fugit minima
-					sed dolor placeat doloribus dignissimos possimus quidem voluptate illo odit, ipsam consequatur magni quae!
-					Dolorem magni officia harum reiciendis, veniam commodi, porro atque enim ad odit nesciunt, mollitia nisi
-					quaerat doloremque incidunt magnam? Officiis at sequi ab. Fuga quam distinctio, voluptate illum nesciunt sit
-					deleniti incidunt quo beatae. Neque reiciendis voluptatem mollitia accusantium perferendis veritatis impedit
-					iusto eligendi tempora iure. Doloribus nulla similique eaque totam perferendis maxime temporibus, ratione
-					dolor non atque exercitationem molestias, modi impedit dolore placeat itaque debitis nisi unde consequuntur
-					quis, fuga nemo. Inventore quibusdam repellendus optio deleniti delectus dolorem error eaque quod, officia
-					ipsa sed eveniet soluta perspiciatis nesciunt sapiente natus officiis quis nisi quasi cum! Voluptates, animi
-					itaque? Recusandae quo officiis, at a perspiciatis enim minima vel sunt tempore?</p>
+					empore?</p>
 			</section>
 
-			<!-- Модалки -->
 
-			<div class="modal__alert none">
-				<h2 class="modal__title">Вход в админпанель</h2>
-				<form class="test__form" action="#">
-					<label for="email">Логин</label>
-					<input type="email" name="email">
-					<label for="password">Пароль</label>
-					<input type="password" name="password" placeholder="...введите не менее 8 символов">
-					<input class="btn modal__btn" type="submit" value="Войти">
-				</form>
-				
-			</div>
 
 		</main>
 
@@ -176,9 +89,47 @@
 
 		</footer>
 
+
 		<!-- Модалки -->
 
 
+		<div class="modal__alert" id="auth-modal">
+			<div class="modal-header">
+				<h2 class="modal__title">Вход в админпанель</h2>
+				<a type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></a>
+			</div>
+			<form class="test__form" action="#">
+				<label for="login">Логин</label>
+				<input type="text" name="login" id="login-control">
+				<label for="password">Пароль</label>
+				<input type="password" name="password" placeholder="...введите не менее 8 символов" id="password-control">
+				<input class="btn modal__btn login__btn" type="submit" value="Войти">
+			</form>
+
+		</div>
+<!-- 
+		<div class="modal fade" id="auth-modal">
+			<div class="modal-dialog modal-dialog-centered modal-sm">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="exampleModalLabel">Вход</h5>
+						<button type="button" class="btn-close close-btn" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+						<form action="#">
+							<label for="login-control" class="col-form-label">Логин:</label>
+							<input class="form-control mb-3" type="text" id="login-control">
+							<label for="password-control" class="col-form-label">Пароль:</label>
+							<input class="form-control mb-3" type="password" id="password-control">
+						</form>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-outline-dark close-btn" data-bs-dismiss="modal">Отмена</button>
+						<button type="button" class="btn btn-dark login-btn">Войти</button>
+					</div>
+				</div>
+			</div>
+		</div> -->
 
 
 	</div>
